syntax = "proto3";
package connection_request;

message AddressInfo {
    string host = 1;
    uint32 port = 2;
}

enum ReadFromReplicaStrategy {
    AlwaysFromPrimary = 0;
    RoundRobin = 1;
    LowestLatency = 2;
    AZAffinity = 3;
}

enum TlsMode {
    NoTls = 0;
    SecureTls = 1;
    InsecureTls = 2;
}


message ConnectionRequest {
    repeated AddressInfo addresses = 1;
    TlsMode tls_mode = 2;
    bool cluster_mode_enabled = 3;
    uint32 response_timeout = 4;
    uint32 connection_timeout = 5;
    // credentials - TODO - implement
    ReadFromReplicaStrategy read_from_replica_strategy = 6;
    ConnectionRetryStrategy connection_retry_strategy = 7;
}

message ConnectionRetryStrategy {
    uint32 number_of_retries = 1;
    uint32 factor = 2;
    uint32 exponent_base = 3;
}
